--- a/my-app/src/Components/Navbar.css
+++ b/my-app/src/Components/Navbar.css
@@ -1,8 +1,10 @@
 .navbar{
-    background-color: lightgrey;
+    background-color: grey;
     justify-content: space-between;
 }
 .navLink{
     text-decoration: none;
-
+    color: black;
+    font-size: 2rem;
+    font-weight: bold;
 }
