--- a/my-app/src/Components/Navbar.css
+++ b/my-app/src/Components/Navbar.css
@@ -7,4 +7,7 @@
     color: black;
     font-size: 2rem;
     font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
