--- a/my-app/src/Pages/Home.css
+++ b/my-app/src/Pages/Home.css
@@ -1,29 +1,54 @@
 .shopTitle {
-    margin-top: 100px;
+    margin-top: 0;
     text-align: center;
-    font-size: 40px;
+    font-size: 20px;
   }
-  .products {
-    width: 100%;
+  .productsContainer {
+    box-sizing: border-box;
+    width: auto;
     height: auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     place-items: center;
+    margin-left: 2rem;
+    margin-right: 2rem;
   }
-  
+
+  @media screen and (max-width: 900px){
+    .productsContainer{
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+  @media screen and (max-width: 500px){
+    .productsContainer{
+      grid-template-columns: 1fr;
+    }
+  }
+
   .product {
+    box-sizing: border-box;
+    width: auto;
+    height: auto;
+    padding: 10px;
+    margin: 10px;
     border-radius: 15px;
-    width: 300px;
-    height: 350px;
-    margin: 100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: lightgrey;
+    box-shadow: 0 0 4px 4px grey;
   }
   
+  .imageContainer{
+    padding: 10px;
+  }
+
   .product img {
-    width: 400px;
+    box-sizing: border-box;
+    width: 100%;
+    border-radius: 15px;
+    border: 2px solid black;
   }
   
   .product .description {
@@ -31,15 +56,20 @@
   }
   
   .product:hover {
-    transition: 0.3s ease-in;
+    transition: 0.1s ease-in;
     cursor: pointer;
+    padding: 15px;
+    margin: 5px;
+    background-color: rgb(152, 148, 148);
+    box-shadow: 0 0 4px 4px rgb(66, 65, 65);
   }
   
   .addToCartBttn {
     background-color: transparent;
     border: 2px solid rgb(19, 19, 19);
     min-width: 100px;
-    color: black;
+    color:white;
+    background-color: black;
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 5px;
@@ -48,7 +78,6 @@
   }
   
   .addToCartBttn:hover {
-    background-color: rgb(19, 19, 19);
-    color: white;
+    background-color: grey;
     cursor: pointer;
   }
